--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next build && next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "axios": "^0.21.1",
