--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "export": "next export"
   },
   "dependencies": {
+    "@types/react-router-redux": "^5.0.18",
     "axios": "^0.21.1",
     "next": "^10.1.3",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@types/redux-thunk": "^2.1.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
